@@ -62,7 +62,7 @@ public class ContainerEssentiaCell
 		@Override
 		public boolean isItemValidForSlot( final int slotID, final ItemStack itemStack )
 		{
-			return EssentiaItemContainerHelper.instance.isContainer( itemStack );
+			return EssentiaItemContainerHelper.instance.isContainerOrLabel( itemStack );
 		}
 	};
 
