@@ -35,7 +35,7 @@ public class ContainerWirelessEssentiaTerminal
 		@Override
 		public boolean isItemValidForSlot( final int slotID, final ItemStack itemStack )
 		{
-			return EssentiaItemContainerHelper.instance.isContainer( itemStack );
+			return EssentiaItemContainerHelper.instance.isContainerOrLabel( itemStack );
 		}
 	};
 
